--- a/app.css
+++ b/app.css
@@ -1,6 +1,8 @@
-body {
-  background: white;
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 a {
@@ -11,6 +13,8 @@ a {
 
 header {
   background-color: #25a7f0;
+  overflow: auto;
+  padding: .5em;
 }
 
 /* .container-navbar {
