--- a/app.css
+++ b/app.css
@@ -1,8 +1,9 @@
-* {
+html, body {
   box-sizing: border-box;
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  width: 100%;
 }
 
 a {
@@ -14,14 +15,15 @@ a {
 
 .header {
   display: flex;
-  justify-content: space-between;
+  
   background: #25a7f0;
   padding: .5em;
+  flex-grow: 1;
+  width: 100%;
 }
 
 nav {
-  display: flex;
-}
+  justify-content: space-between;
 
 .test {
   background: blue;
