--- a/app.css
+++ b/app.css
@@ -15,16 +15,16 @@ a {
 
 .header {
   display: flex;
-  
   background: #25a7f0;
   padding: .5em;
   flex-grow: 1;
   width: 100%;
 }
 
-nav {
-  justify-content: space-between;
 
+nav {
+  width: 100%;
+}
 .test {
   background: blue;
 }
